--- a/Bloom_Buddy/Bloom_Buddy/templates/css/style.css
+++ b/Bloom_Buddy/Bloom_Buddy/templates/css/style.css
@@ -1,30 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import 'base.css';
 
 
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body,
-input,
-button {
-  font-family: "Poppins", sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Playfair Display', sans-serif;
-}
 
 main {
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
-  background-color: #6c40d2;
+  background-color: var(--purple);
   padding: 2rem;
   display: flex;
   align-items: center;
@@ -119,7 +101,7 @@ form.sign-up-form {
 }
 
 .toggle:hover {
-  color: #ea3495b3;
+  color: var(--pink);
 }
 
 .input-wrap {
@@ -175,7 +157,7 @@ label {
 }
 
 .text a:hover {
-  color: #ea3495b3;
+  color: var(--pink);
 }
 
 .sign-btn {
@@ -193,7 +175,7 @@ label {
 }
 
 .sign-btn:hover {
-  background-color: #ea3495b3;
+  background-color: var(--pink);
   transform: scale(1.05);
 }
 
@@ -235,7 +217,7 @@ main.sign-up-mode .carousel {
   width: 55%;
   left: 45%;
   top: 0;
-  background-color: #6D41D2B3;
+  background-color: var(--translucent-purple);
   border-radius: 2rem;
   display: grid;
   grid-template-rows: auto 1fr;
