--- a/Bloom_Buddy/mchath/templates/mchat-survey.html
+++ b/Bloom_Buddy/mchath/templates/mchat-survey.html
@@ -11,6 +11,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
+    <link rel="icon" href="{% static 'media/no bg dark_logo_transparent_straightline_1-200h.png' %}">
     <meta property="twitter:card" content="summary_large_image" />
     <!-- CSS -->
     <link href="{% static 'css/mchat-survey.css' %}" rel="stylesheet">
@@ -71,7 +72,7 @@
             <img
               id="bloombuddy-logo"
               alt="darklogotransparentstraightlineCopy3573"
-              src="static/media/no%20bg%20dark_logo_transparent_straightline_1-200h.png"
+              src="{% static 'media/no bg dark_logo_transparent_straightline_1-200h.png' %}"
               loading="eager"
               class="logo mchat-header-darklogotransparentstraightline-copy"
             />
@@ -80,7 +81,7 @@
             <h1 class="mchat-survey-text">THE M-CHAT-R™ SURVEY</h1>
             <img
               alt="image"
-              src="static/media/illustration-1-300w.jpeg"
+              src="{% static 'media/illustration-1-300w.jpeg' %}"
               class="mchat-survey-image"
             />
             <h1 class="mchat-survey-text001">
