--- a/Bloom_Buddy/mchath/templates/instruction.html
+++ b/Bloom_Buddy/mchath/templates/instruction.html
@@ -12,10 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
+    <link rel="icon" href="{% static 'media/no bg dark_logo_transparent_straightline_1-200h.png' %}">
     <!-- CSS -->
     <link href="{% static 'css/mchat-survey.css' %}" rel="stylesheet">
     <link href="{% static 'css/reset.css' %}" rel="stylesheet">
-    <!-- <style data-tag="reset-style-sheet">
+    <style data-tag="reset-style-sheet">
       html {  line-height: 1.15;}
       body {  margin: 0;}* 
       {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6 {  margin: 0;  padding: 0;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
@@ -37,7 +38,7 @@
         background-color: var(--dl-color-gray-white);
 
       }
-    </style> -->
+    </style>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -54,7 +55,7 @@
   <body>
       <div>
         <link href="{% static 'mchat-survey.css'%}" rel="stylesheet"/>
-        <link href="{% static 'style.css'%}" rel="stylesheet"/>
+        <link href="{% static 'css/style.css'%}" rel="stylesheet"/>
 
         <div class="mchat-survey-container">
             <header
@@ -71,7 +72,7 @@
                 <img
                 id="bloombuddy-logo"
                 alt="darklogotransparentstraightlineCopy3573"
-                src="static/media/no%20bg%20dark_logo_transparent_straightline_1-200h.png"
+                src="{% static 'media/no bg dark_logo_transparent_straightline_1-200h.png' %}"
                 loading="eager"
                 class="logo mchat-header-darklogotransparentstraightline-copy"
                 />
@@ -112,9 +113,11 @@
                 </div>
             </div>
             <div class="mchat-buttons-container mchat-buttons-root-class-name19">
-                <button type="submit" class="mchat-buttons-button content prev-btn">
-                <span>Previous</span>
-                </button>
+                <a href="/mchat" >
+                    <button type="submit" class="mchat-buttons-button content prev-btn">
+                        <span>Previous</span>
+                    </button>
+                </a>
             </div>
             <div class="mchat-buttons-container mchat-buttons-root-class-name20">
                 <a href="/registerPage"><button type="submit" class="mchat-buttons-button content next-btn">
