--- a/Bloom_Buddy/mchath/templates/signinfo.html
+++ b/Bloom_Buddy/mchath/templates/signinfo.html
@@ -15,11 +15,11 @@
     <!-- CSS -->
     <link href="{% static 'css/mchat-survey.css' %}" rel="stylesheet">
     <link href="{% static 'css/reset.css' %}" rel="stylesheet">
-    <!-- /* <style data-tag="reset-style-sheet">
-      html {  line-height: 1.15;}
+    <style data-tag="reset-style-sheet">
+      /* html {  line-height: 1.15;}
       body {  margin: 0;}* 
       {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6 {  margin: 0;  padding: 0;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
-    </style> */ -->
+    </style> */
     <style data-tag="default-style-sheet">
       html {
         font-family: Poppins;
@@ -50,11 +50,8 @@
     />
 
     <link rel="stylesheet" href=".css/style.css" />
-  </head>
-  <body>
-      <div>
-        <link href="{% static 'mchat-survey.css'%}" rel="stylesheet"/>
-        <link href="{% static 'style.css'%}" rel="stylesheet"/>
+    </head>
+    <body>
 
         <div class="mchat-survey-container">
             <header
@@ -71,13 +68,14 @@
             <img
               id="bloombuddy-logo"
               alt="darklogotransparentstraightlineCopy3573"
-              src="static/media/no%20bg%20dark_logo_transparent_straightline_1-200h.png"
+              src="{% static 'media/no bg dark_logo_transparent_straightline_1-200h.png' %}"
               loading="eager"
               class="logo mchat-header-darklogotransparentstraightline-copy"
+              
             />
             </header>
             <div class="mchat-survey-container004">
-                <form method="POST" action="" >
+                <form method="POST" action="{{action}}" >
                     {% csrf_token %}
                     <div id="info-form" class="mchat-survey-container005 step">
                         <h1 class="h3">Please, tell us a bit about yourself</h1>
@@ -191,7 +189,7 @@
                                 <div
                                     class="mchat-buttons-container mchat-buttons-root-class-name22"
                                 >
-                                    <a href="/quiz">
+                                    <a href="/quizz">
                                         <button type="submit" class="mchat-buttons-button content next-btn">
                                         <span>Next</span>
                                         </button>
@@ -204,3 +202,5 @@
                     </div>
                 </form>
             </div>
+
+    </body>
