--- a/Bloom_Buddy/mchath/templates/mchat-results-page.html
+++ b/Bloom_Buddy/mchath/templates/mchat-results-page.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+  <div class="mchat-survey-container">
     <div>
       <link href="./mchat-results-page.css" rel="stylesheet" />
 
@@ -200,5 +201,6 @@
         </div>
       </div>
     </div>
+  </div>
   </body>
 </html>
