--- a/Bloom_Buddy/mchath/templates/instruction.html
+++ b/Bloom_Buddy/mchath/templates/instruction.html
@@ -128,4 +128,8 @@
             <span class="mchat-survey-text014">
                 © 2009 Diana Robins, Deborah Fein &amp; Marianne Barton
             </span>
+        </div>
+    </div>
+    </body>
+
 </html>
