--- a/Bloom_Buddy/mchath/templates/quiz.html
+++ b/Bloom_Buddy/mchath/templates/quiz.html
@@ -12,15 +12,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
+    <link rel="icon" href="{% static 'media/no bg dark_logo_transparent_straightline_1-200h.png' %}">
     <!-- CSS -->
     <link href="{% static 'css/mchat-survey.css' %}" rel="stylesheet">
-    <link rel="icon" href="{% static 'media/no bg dark_logo_transparent_straightline_1-200h.png' %}">
     <link href="{% static 'css/reset.css' %}" rel="stylesheet">
     <style data-tag="reset-style-sheet">
-      /* html {  line-height: 1.15;}
+      html {  line-height: 1.15;}
       body {  margin: 0;}* 
       {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6 {  margin: 0;  padding: 0;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
-    </style> */
+    </style> 
     <style data-tag="default-style-sheet">
       html {
         font-family: Poppins;
@@ -53,6 +53,9 @@
     <link rel="stylesheet" href=".css/style.css" />
   </head>
   <body>
+    <div class="mchat-survey-container">
+    <link href="{% static 'mchat-survey.css'%}" rel="stylesheet"/>
+    <link href="{% static 'css/style.css'%}" rel="stylesheet"/>
     <header
                 class="mchat-header-h-e-a-d-e-r mchat-header mchat-header-root-class-name5"
             >
@@ -64,7 +67,7 @@
                 class="logo mchat-header-darklogotransparentstraightline-copy"
                 />
       </header>
-  <form action="{{ action }}" method="POST">
+    <form action="{{ action }}" method="POST">
       {% csrf_token %}    
                 <div id="survey-slide-1" class="mchat-survey-container015 step">
                   <div class="mchat-survey-container016">
@@ -619,5 +622,6 @@
                     <path d="M864 128l-480 480-224-224-160 160 384 384 640-640z"></path>
                   </svg>
                 </div>
-    </form>
+        </form>
+    </div>
   </body>
