--- a/Bloom_Buddy/mchath/templates/mchat-survey.html
+++ b/Bloom_Buddy/mchath/templates/mchat-survey.html
@@ -17,10 +17,10 @@
     <link href="{% static 'css/mchat-survey.css' %}" rel="stylesheet">
     <link href="{% static 'css/reset.css' %}" rel="stylesheet">
     <style data-tag="reset-style-sheet">
-      /* html {  line-height: 1.15;}
+      html {  line-height: 1.15;}
       body {  margin: 0;}* 
       {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6 {  margin: 0;  padding: 0;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
-    </style> */
+    </style>
     <style data-tag="default-style-sheet">
       html {
         font-family: Poppins;
@@ -55,6 +55,8 @@
   <body>
       <div>
           <div class="mchat-survey-container">
+          
+          <div id="mchat-index" class="mchat-survey-container001 active step">
           <header
             class="mchat-header-h-e-a-d-e-r mchat-header mchat-header-root-class-name5"
           >
@@ -74,7 +76,7 @@
               class="logo mchat-header-darklogotransparentstraightline-copy"
             />
           </header>
-          <div id="mchat-index" class="mchat-survey-container001 active step">
+
             <h1 class="mchat-survey-text">THE M-CHAT-R™ SURVEY</h1>
             <img
               alt="image"
@@ -85,13 +87,13 @@
               The M-CHAT-R™ survey has demonstrative predictive power and is not
               designed to detect all possible developmental disorders.
             </h1>
-            <span class="mchat-survey-text002">
+            <p class="mchat-survey-text002">
               The Modified Checklist for Autism in Toddlers (M-CHAT; Robins, Fein,
               &amp; Barton, 1999a) is a screening measure developed to identify
               young children with an elevated risk for autism spectrum disorder
               (ASD) through parent report. This instrument is one of the most
               commonly used screening instruments for ASD in toddlers worldwide.
-            </span>
+            </p>
             <div class="mchat-buttons-container mchat-buttons-root-class-name18">
               <a href="/instruction">
                 <button type="submit" class="mchat-buttons-button content">
