--- a/Bloom_Buddy/mchath/templates/quiz.html
+++ b/Bloom_Buddy/mchath/templates/quiz.html
@@ -625,7 +625,7 @@
         </form>
     </div>
   </body>
-
+<script>
 $('#btnNext1').click(function() {
     $('#survey-slide-1').hide('fast', function() {
         $('#survey-slide-2').show('fast');
@@ -636,3 +636,5 @@ $('#btnNext1').click(function() {
       $('#survey-slide-3').show('fast');
   });
 });
+</script>
+</html>
