--- a/Bloom_Buddy/mchath/templates/instruction.html
+++ b/Bloom_Buddy/mchath/templates/instruction.html
@@ -119,12 +119,28 @@
                     </button>
                 </a>
             </div>
-            <div class="mchat-buttons-container mchat-buttons-root-class-name20">
+            <!-- <div class="mchat-buttons-container mchat-buttons-root-class-name20">
                 <a href="/registerPage"><button type="submit" class="mchat-buttons-button content next-btn">
                     <span>Next</span>
                     </button>
                 </a>
             </div>
+            <div class="mchat-survey-container090">
+              <a href="/mchat" >
+                <div class="mchat-buttons-container mchat-buttons-root-class-name29">
+                    <button type="submit" class="mchat-buttons-button content">
+                      <span>Previous</span>
+                    </button>
+                </div>
+              </a>
+            </div> -->
+              <div class="mchat-buttons-container mchat-buttons-root-class-name30">
+                <a href="/registerPage">
+                  <button type="submit" class="mchat-buttons-button content">
+                    <span>Next</span>
+                  </button>
+              </div>
+          </div>
             <span class="mchat-survey-text014">
                 © 2009 Diana Robins, Deborah Fein &amp; Marianne Barton
             </span>
